--- a/i3/config
+++ b/i3/config
@@ -42,9 +42,6 @@ bindsym $mod+d exec dmenu_run
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
-# lock screen nicely
-bindsym $mod+Shift+p exec dm-tool lock
-
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -125,6 +122,9 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+# lock the screen
+bindsym $mod+Shift+Delete exec dm-tool lock
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
