--- a/i3/config
+++ b/i3/config
@@ -163,8 +163,11 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#}
 
-exec --no-startup-id xfce4-panel --disable-wm-check
+#start polybar
+exec polybar -r bar1
+
+#exec --no-startup-id xfce4-panel --disable-wm-check
