--- a/i3/config
+++ b/i3/config
@@ -168,6 +168,6 @@ bindsym $mod+r mode "resize"
 #}
 
 #start polybar
-exec polybar -r bar1
+exec --no-startup-id "~/.config/i3/launch_polybar.sh"
 
 #exec --no-startup-id xfce4-panel --disable-wm-check
