--- a/i3/config
+++ b/i3/config
@@ -42,6 +42,9 @@ bindsym $mod+d exec dmenu_run
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
+# open a thunar window
+bindsym $mod+t exec thunar
+
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
