--- a/i3/config
+++ b/i3/config
@@ -122,6 +122,11 @@ bindsym $mod+Shift+0 move container to workspace 10
 # move focused workspace between monitors
 bindsym $mod+Ctrl+greater move workspace to output right
 bindsym $mod+Ctrl+less move workspace to output left
+# alternately use arrow keys:
+bindsym $mod+Ctrl+Right move workspace to output right
+bindsym $mod+Ctrl+Left move workspace to output left
+bindsym $mod+Ctrl+Up move workspace to output up
+bindsym $mod+Ctrl+Down move workspace to output down
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
