--- a/i3/config
+++ b/i3/config
@@ -148,6 +148,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 # brightness
 bindsym XF86MonBrightnessUp exec light -A 10
 bindsym XF86MonBrightnessDown exec light -U 10
+bindsym $mod+Shift+b exec "~/.config/i3/brightness_toggle"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
