--- a/i3/config
+++ b/i3/config
@@ -47,6 +47,9 @@ bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun 
 # open a thunar window
 bindsym $mod+t exec thunar
 
+# todo list
+bindsym $mod+Shift+t exec ~/.config/i3/todofi.sh
+
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
