--- a/xournalpp/toolbar.ini
+++ b/xournalpp/toolbar.ini
@@ -39,7 +39,7 @@
 #
 #
 
-[Toolbar Right Copy]
-toolbarTop1=SAVE,NEW,OPEN,SEPARATOR,CUT,COPY,PASTE,SEPARATOR,UNDO,REDO,SEPARATOR,PEN,ERASER,HIGHLIGHTER,IMAGE,TEXT,MATH_TEX,DRAW,SEPARATOR,SELECT,VERTICAL_SPACE,HAND,SEPARATOR,DEFAULT_TOOL,SEPARATOR,PAGE_SPIN,SEPARATOR,GOTO_FIRST,GOTO_NEXT_ANNOTATED_PAGE,GOTO_LAST,INSERT_NEW_PAGE,DELETE_CURRENT_PAGE,SEPARATOR,LAYER,FULLSCREEN
-toolbarRight1=COLOR(0),COLOR(1),COLOR(2),COLOR(3),COLOR(4),COLOR(5),COLOR(6),COLOR(7),COLOR(8),COLOR_SELECT
-name=Toolbar Right Copy
+[Toolbar Right Custom]
+toolbarTop1=SAVE,NEW,OPEN,SEPARATOR,SAVEPDF,PRINT,SEPARATOR,CUT,COPY,PASTE,SEPARATOR,UNDO,REDO,SEPARATOR,PEN,ERASER,HIGHLIGHTER,PDF_TOOL,IMAGE,TEXT,MATH_TEX,DRAW,SEPARATOR,SELECT,VERTICAL_SPACE,HAND,SETSQUARE,COMPASS,SEPARATOR,DEFAULT_TOOL,SEPARATOR,PAGE_SPIN,SEPARATOR,GOTO_FIRST,GOTO_NEXT_ANNOTATED_PAGE,GOTO_LAST,INSERT_NEW_PAGE,DELETE_CURRENT_PAGE,SEPARATOR,LAYER,FULLSCREEN
+toolbarRight1=COLOR(0),COLOR(1),COLOR(2),COLOR(3),COLOR(4),COLOR(5),COLOR(6),COLOR(7),COLOR(8),COLOR_SELECT,SEPARATOR,FINE,MEDIUM,THICK,SEPARATOR,PAIRED_PAGES,PRESENTATION_MODE,ZOOM_100,ZOOM_FIT,ZOOM_OUT,ZOOM_SLIDER,ZOOM_IN
+name=Toolbar Right Custom
