--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
+bindsym $mod+Shift+Return exec kitty --class floating
 
 # kill focused window
 bindsym $mod+Shift+q kill
