--- a/i3/config
+++ b/i3/config
@@ -33,6 +33,28 @@ floating_modifier $mod
 for_window [class="floating"] floating enable
 for_window [class="floating"] resize set 640 480
 
+for_window [class="Thunar"] floating enable
+for_window [class=".*"] border pixel 8
+hide_edge_borders smart
+gaps inner 12
+smart_gaps on
+
+# colors
+set $blue #30a4ff
+set $accent #914e0f
+set $light #ffffff
+set $dark #111111
+
+# colour of border, background, text, indicator, and child_border
+# class                 border  backgr. text    indicator child_border
+client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
+
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
@@ -153,6 +175,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # lock the screen
 bindsym $mod+Shift+Delete exec dm-tool lock
+# bindsym $mod+Shift+Delete exec i3lock -i ~/.config/i3/xubuntu-noble.png
 
 # media keys
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
@@ -200,3 +223,4 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id "~/.config/i3/launch_polybar.sh"
 
 #exec --no-startup-id xfce4-panel --disable-wm-check
+
