--- a/polybar/config
+++ b/polybar/config
@@ -53,11 +53,12 @@ module-margin-right = 2
 ; font-0 = fixed:pixelsize=10;1
 font-0 = Berkeley Mono:pixelsize=12;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+; font-2 = siji:pixelsize=10;1
+font-2 = "Symbols Nerd Font Mono:size=10"
 
 modules-left = i3
 modules-center = xwindow
-modules-right = pulseaudio wlan bat0 bat1 date powermenu
+modules-right = backlight-acpi pulseaudio wlan bat0 bat1 date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -132,7 +133,7 @@ label-urgent-padding = 2
 type = internal/xbacklight
 
 format = <label> <bar>
-label = BL
+label = 󰃟
 
 bar-width = 10
 bar-indicator = |
@@ -156,20 +157,22 @@ interface = wlp61s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
+; format-connected = <label-connected>
+; format-connected-underline = #9f78e1
+format-connected-underline = ${colors.background-alt}
 label-connected = %{A1:nm-connection-editor:}%essid%%{A}
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+format-disconnected = <label-disconnected>
+format-disconnected-underline = ${self.format-connected-underline}
+label-disconnected = 󰖪 disconnected
+label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = 󰖩
+; ramp-signal-0 = 
+; ramp-signal-1 = 
+; ramp-signal-2 = 
+; ramp-signal-3 = 
+; ramp-signal-4 = 
 ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/date]
@@ -184,7 +187,8 @@ time-alt = %H:%M %z
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+; format-underline = #0a6cf5
+format-underline = ${colors.background-alt}
 
 label = %date% %time%
 
@@ -195,7 +199,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
+label-muted = 󰸈 muted
 label-muted-foreground = #666
 
 bar-volume-width = 10
@@ -263,15 +267,19 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
+animation-discharging-4 = 
+animation-discharging-3 = 
+animation-discharging-2 = 
+animation-discharging-1 = 
+animation-discharging-0 = 
 animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
