--- a/polybar/config
+++ b/polybar/config
@@ -317,9 +317,9 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
+label-open = 󰐥
 label-open-foreground = ${colors.secondary}
-label-close =  cancel
+label-close = 󰜺 cancel
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
