--- a/polybar/config
+++ b/polybar/config
@@ -190,40 +190,16 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+format-volume = <ramp-volume> <label-volume> <bar-volume>
+label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
+
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
 
 label-muted = 󰸈 muted
 label-muted-foreground = #666
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 1
-bar-volume-fill = ─
-bar-volume-fill-font = 1
-bar-volume-empty = ─
-bar-volume-empty-font = 1
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[module/alsa]
-type = internal/alsa
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -251,7 +227,7 @@ click-left = exec blueman-manager
 
 [module/battery]
 type = internal/battery
-adapter = AC
+adapter = ac
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
@@ -289,11 +265,11 @@ animation-discharging-framerate = 750
 
 [module/bat0]
 inherit = module/battery
-battery = BAT0
+battery = bat0
 
 [module/bat1]
 inherit = module/battery
-battery = BAT1
+battery = bat1
 
 [module/temperature]
 type = internal/temperature
@@ -350,7 +326,7 @@ menu-3-0-exec = menu-open-0
 menu-3-1 = lock
 menu-3-1-exec = dm-tool lock
 
-;Currently broken!
+;currently broken!
 [module/battery-combined-udev]
 type = custom/script
 exec = ~/polybar-scripts/battery-combined-udev.sh
